--- a/src/components/footer/footer.component.pug
+++ b/src/components/footer/footer.component.pug
@@ -3,7 +3,7 @@ footer
         .wrapper 
             .footerFlexContainer
                 .footerLogo
-                    img(src="assets/images/png/logo.png", alt="logo")
+                    img(src="assets/images/svg/logoWhite.svg", alt="logo")
                 .footerDealer
                     a.page__btn(href="javascript:void(0)") Become a dealer
                 .footerContacts 
