--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -3,7 +3,7 @@ header.header
         .headerFlexContainer
             .headerLogo
                 a(href="/") 
-                    img(src="assets/images/png/logo.png", alt="logo")
+                    img(src="assets/images/svg/logoWhite.svg", alt="logo")
             .headerNav
                 nav.headerNavLinks
                     a.headerLink(href="javascript:void(0)") RS chip 
@@ -11,7 +11,7 @@ header.header
                     a.headerLink(href="javascript:void(0)") Gas pedal 
                     a.headerLink(href="javascript:void(0)") Tuning 
                     a.headerLink(href="javascript:void(0)") Support 
-                    a.headerLink(href="javascript:void(0)") Contact us
+                    a.headerLink(href="contacts/contacts.html") Contact us
                     a.headerLink(href="faq/faq.html") faq
                 .headerNavCart
                     .icon-cart-png
