--- a/src/components/menu/menu.component.pug
+++ b/src/components/menu/menu.component.pug
@@ -2,7 +2,7 @@
 section.menu
     .menuHeader
         .menuLogo
-            img(src="assets/images/png/logoBlack.png", alt="logo")
+            img(src="assets/images/svg/logoBlack.svg", alt="logo")
         .menuClose
             .icon-close
     nav.menuNav
