--- a/src/sass/blocks/pages.sass
+++ b/src/sass/blocks/pages.sass
@@ -1,33 +1,2 @@
-.usEmail 
-    padding: 0 0 131px
-    position: relative
-    .page__text
-        font-family: #{$SFUIDisplay}-Bold
-        font-size: 36px
-        line-height: 164%
-        letter-spacing: 0.05em
-        color: #fff
-        a
-            font-size: inherit
-    &::before
-        content: ''
-        position: absolute
-        right: -60%
-        bottom: -22%
-        transform: translate(-50%, -50%)
-        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
-        filter: blur(500px)
-
-        width: 299px
-        height: 180px
-
-        +sm-block
-            width: 544px
-            height: 544px
-        +md-block
-            width: 544px
-            height: 544px
-        +lg-block
-            width: 544px
-            height: 544px
-        
+@import './faqPage'
+@import './contactsPage'
