--- a/src/pages/faq/faq.pug
+++ b/src/pages/faq/faq.pug
@@ -9,7 +9,7 @@ block title
 block append style
 
 block content
-	main.page.page-faq
+	main.page.pageFaq
 		.wrapper
 			h2.page__title-h2.page__title-h2_big SUPPORT 
 				span.page__title-h2_small.page__title-h2_absolute Find Answers
