--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -4,7 +4,7 @@
 
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 32.05128205128205% 97.92857142857143%;
+	background-position: 25.77319587628866% 97.92857142857143%;
 }
 
 .svg-iconCart-box {
@@ -24,7 +24,7 @@
 
 .svg-iconChatGray {
 	@extend %svg-common;
-	background-position: 34.437086092715234% 0;
+	background-position: 27.513227513227513% 0;
 }
 
 .svg-iconChatGray-box {
@@ -52,9 +52,19 @@
 	height: 46.81px;
 }
 
+.svg-iconFacebookGray {
+	@extend %svg-common;
+	background-position: 96.2085308056872% 23.170731707317074%;
+}
+
+.svg-iconFacebookGray-box {
+	width: 30px;
+	height: 37px;
+}
+
 .svg-iconFacebookWhite {
 	@extend %svg-common;
-	background-position: 56.395348837209305% 93.0925925925926%;
+	background-position: 65.23809523809524% 93.0925925925926%;
 }
 
 .svg-iconFacebookWhite-box {
@@ -64,7 +74,7 @@
 
 .svg-iconFreeShipping {
 	@extend %svg-common;
-	background-position: 34.437086092715234% 33.29065300896287%;
+	background-position: 27.513227513227513% 33.29065300896287%;
 }
 
 .svg-iconFreeShipping-box {
@@ -72,9 +82,19 @@
 	height: 44.8px;
 }
 
+.svg-iconInstagramGray {
+	@extend %svg-common;
+	background-position: 100% 0;
+}
+
+.svg-iconInstagramGray-box {
+	width: 38px;
+	height: 38px;
+}
+
 .svg-iconInstagramWhite {
 	@extend %svg-common;
-	background-position: 63.80368098159509% 32.298136645962735%;
+	background-position: 48.25870646766169% 93.67080745341615%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -84,7 +104,7 @@
 
 .svg-iconMarkLocationGray {
 	@extend %svg-common;
-	background-position: 66.66666666666667% 0;
+	background-position: 53.608247422680414% 0;
 }
 
 .svg-iconMarkLocationGray-box {
@@ -104,7 +124,7 @@
 
 .svg-iconMarkMapPurple {
 	@extend %svg-common;
-	background-position: 28.72983870967742% 66.31543624161074%;
+	background-position: 23.180154534363563% 66.31543624161074%;
 }
 
 .svg-iconMarkMapPurple-box {
@@ -114,7 +134,7 @@
 
 .svg-iconPhoneGray {
 	@extend %svg-common;
-	background-position: 55.48148148148148% 66.31543624161074%;
+	background-position: 44.94% 66.31543624161074%;
 }
 
 .svg-iconPhoneGray-box {
@@ -124,7 +144,7 @@
 
 .svg-iconReturnCircle {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 79.8941798941799% 0;
 }
 
 .svg-iconReturnCircle-box {
@@ -134,7 +154,7 @@
 
 .svg-iconShield {
 	@extend %svg-common;
-	background-position: 98.69281045751634% 34.899328859060404%;
+	background-position: 79.05759162303664% 34.899328859060404%;
 }
 
 .svg-iconShield-box {
@@ -142,9 +162,19 @@
 	height: 52px;
 }
 
+.svg-iconYoutubeGray {
+	@extend %svg-common;
+	background-position: 52.26130653266332% 31.515151515151516%;
+}
+
+.svg-iconYoutubeGray-box {
+	width: 42px;
+	height: 36px;
+}
+
 .svg-iconYoutubeWhite {
 	@extend %svg-common;
-	background-position: 94.96855345911949% 63.80368098159509%;
+	background-position: 76.6497461928934% 63.80368098159509%;
 }
 
 .svg-iconYoutubeWhite-box {
