--- a/src/components/footer/footer.component.pug
+++ b/src/components/footer/footer.component.pug
@@ -8,30 +8,30 @@ footer
                     a.page__btn(href="javascript:void(0)") Become a dealer
                 .footerContacts 
                     .footerContactsItem
-                        i.icon.icon-phone-png
-                        a(href="tel:+1 800 796 16 17").phone +1 800 796 16 17
+                        i.svg-iconPhoneGray.svg-iconPhoneGray-box
+                        a(href="tel:+1 800 796 16 17") +1 800 796 16 17
                     .footerContactsItem
-                        i.icon.icon-mail-png 
+                        i.svg-iconEmailGray.svg-iconEmailGray-box
                         a(href="mailto:rschiphelp@gmail.com").email rschiphelp@gmail.com
                     .footerContactsItem
-                        i.icon.icon-location-png 
+                        i.svg-iconMarkLocationGray.svg-iconMarkLocationGray-box
                         address 1201 East 5th Street North Little Rock, Arkansas USA, 72114
             .footerFlexContainer.footerAdvantages
                 .footerAdvantagesItem
                     .footerAdvantagesItem__title
-                        i.icon.icon-lifetime-png
+                        i.svg-iconShield.svg-iconShield-box
                         h5 Lifetime warranty
                     p.page__text We are confident in longevity and reliability of our products, and happy to provide you with best possible terms and guarantees!
                     a(href="javascript:void(0)") Read more 
                 .footerAdvantagesItem
                     .footerAdvantagesItem__title
-                        i.icon.icon-return-png
+                        i.svg-iconReturnCircle.svg-iconReturnCircle-box
                         h5 30 days return policy
                     p.page__text Not convinced after the 30 days? Just send the produt back No questions asked.
                     a(href="javascript:void(0)") Read more 
                 .footerAdvantagesItem
                     .footerAdvantagesItem__title
-                        i.icon.icon-free-png
+                        i.svg-iconFreeShipping.svg-iconFreeShipping-box
                         h5 Free shipping worldwide
                     p.page__text Free shipping worldwide to any location with DHL express and USPS.
                     a(href="javascript:void(0)") Read more 
