--- a/src/components/socialIcons/socialIcons.component.pug
+++ b/src/components/socialIcons/socialIcons.component.pug
@@ -1,5 +1,5 @@
 //-socialIcons
 .socialIcons
-    a.icon.icon-instagram(href="javascript:void(0)")
-    a.icon.icon-facebook(href="javascript:void(0)")
-    a.icon.icon-youtube(href="javascript:void(0)")
+    a.icon.svg-iconInstagramGray.svg-iconInstagramGray-box(href="javascript:void(0)")
+    a.icon.svg-iconFacebookGray.svg-iconFacebookGray-box(href="javascript:void(0)")
+    a.icon.svg-iconYoutubeGray.svg-iconYoutubeGray-box(href="javascript:void(0)")
