--- a/src/pages/contacts/contacts.pug
+++ b/src/pages/contacts/contacts.pug
@@ -13,14 +13,25 @@ block content
 		.wrapper
 			h2.page__title-h2.page__title-h2_big WELLCOME 
 				span.page__title-h2_small.page__title-h2_absolute Get in touch 
-				span Contact Us
+			h2 Contact Us
 		section.contactCards
 			.wrapper
 				.contactCardsFlexContainer
 					.contactCard
 						.contactCardIcon
-						.contactCardTitle 
-						.contactCardDescriptin
+							.svg-iconMarkLocationPurple.svg-iconMarkLocationPurple-box
+						.contactCardTitle Our office and warehouse
+						.contactCardDescriptin 1201 East 5th Street North Little Rock, Arkansas USA, 72114
+					.contactCard
+						.contactCardIcon
+							.svg-iconPhonePurple.svg-iconPhonePurple-box
+						.contactCardTitle Our Phone Number
+						.contactCardDescriptin +1 800 796 16 17 -USA Toll Free
+					.contactCard
+						.contactCardIcon
+							.svg-iconEmalPurple.svg-iconEmalPurple-box
+						.contactCardTitle Email Address
+						.contactCardDescriptin rschiphelp@gmail.com
 
 		include ../../components/form/form.component.pug
 		section.map 
