--- a/src/sass/blocks/contactsPage.sass
+++ b/src/sass/blocks/contactsPage.sass
@@ -4,7 +4,7 @@
 
 .contactCardsFlexContainer
     +row-flex
-    
+
 .contactCard
     +col
     +size(9)
@@ -12,6 +12,23 @@
     +size-lg(3)
     background: #111111
     border-radius: 15px
-.map 
+    padding: 54px 46px 36px
+.contactCardIcon
+    margin-bottom: 25px
+
+.contactCardTitle
+    font-family: #{$SFUIText}-Regular
+    font-style: normal
+    font-weight: bold
+    font-size: 15px
+    line-height: 59px
+
+.contactCardDescriptin 
+    font-family: #{$SFUIText}-Regular
+    font-size: 15px
+    line-height: 26px
+    color: #B2B2B2
+    letter-spacing: 0.02em
+.map
     img
         width: 100%
