--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -4,7 +4,7 @@
 
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 25.77319587628866% 97.92857142857143%;
+	background-position: 44.44444444444444% 96.67307692307692%;
 }
 
 .svg-iconCart-box {
@@ -24,7 +24,7 @@
 
 .svg-iconChatGray {
 	@extend %svg-common;
-	background-position: 27.513227513227513% 0;
+	background-position: 23.636363636363637% 0;
 }
 
 .svg-iconChatGray-box {
@@ -34,7 +34,7 @@
 
 .svg-iconEmailGray {
 	@extend %svg-common;
-	background-position: 0 99.87417218543047%;
+	background-position: 22.52252252252252% 98.56862745098039%;
 }
 
 .svg-iconEmailGray-box {
@@ -44,7 +44,7 @@
 
 .svg-iconEmalPurple {
 	@extend %svg-common;
-	background-position: 0 33.72462546209223%;
+	background-position: 0 33.29278442922082%;
 }
 
 .svg-iconEmalPurple-box {
@@ -54,7 +54,7 @@
 
 .svg-iconFacebookGray {
 	@extend %svg-common;
-	background-position: 96.2085308056872% 23.170731707317074%;
+	background-position: 96.69421487603306% 22.89156626506024%;
 }
 
 .svg-iconFacebookGray-box {
@@ -64,7 +64,7 @@
 
 .svg-iconFacebookWhite {
 	@extend %svg-common;
-	background-position: 65.23809523809524% 93.0925925925926%;
+	background-position: 84.23236514522821% 0;
 }
 
 .svg-iconFacebookWhite-box {
@@ -74,7 +74,7 @@
 
 .svg-iconFreeShipping {
 	@extend %svg-common;
-	background-position: 27.513227513227513% 33.29065300896287%;
+	background-position: 23.636363636363637% 32.86978508217447%;
 }
 
 .svg-iconFreeShipping-box {
@@ -94,7 +94,7 @@
 
 .svg-iconInstagramWhite {
 	@extend %svg-common;
-	background-position: 48.25870646766169% 93.67080745341615%;
+	background-position: 63.36206896551724% 92.52147239263803%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -104,7 +104,7 @@
 
 .svg-iconMarkLocationGray {
 	@extend %svg-common;
-	background-position: 53.608247422680414% 0;
+	background-position: 46.22222222222222% 0;
 }
 
 .svg-iconMarkLocationGray-box {
@@ -114,7 +114,7 @@
 
 .svg-iconMarkLocationPurple {
 	@extend %svg-common;
-	background-position: 0 66.31543624161074%;
+	background-position: 0 65.43708609271523%;
 }
 
 .svg-iconMarkLocationPurple-box {
@@ -124,7 +124,7 @@
 
 .svg-iconMarkMapPurple {
 	@extend %svg-common;
-	background-position: 23.180154534363563% 66.31543624161074%;
+	background-position: 20.02459160372387% 65.43708609271523%;
 }
 
 .svg-iconMarkMapPurple-box {
@@ -134,7 +134,7 @@
 
 .svg-iconPhoneGray {
 	@extend %svg-common;
-	background-position: 44.94% 66.31543624161074%;
+	background-position: 38.90909090909091% 65.43708609271523%;
 }
 
 .svg-iconPhoneGray-box {
@@ -142,9 +142,19 @@
 	height: 52px;
 }
 
+.svg-iconPhonePurple {
+	@extend %svg-common;
+	background-position: 68.63636363636364% 0;
+}
+
+.svg-iconPhonePurple-box {
+	width: 52px;
+	height: 52px;
+}
+
 .svg-iconReturnCircle {
 	@extend %svg-common;
-	background-position: 79.8941798941799% 0;
+	background-position: 68.63636363636364% 34.437086092715234%;
 }
 
 .svg-iconReturnCircle-box {
@@ -154,7 +164,7 @@
 
 .svg-iconShield {
 	@extend %svg-common;
-	background-position: 79.05759162303664% 34.899328859060404%;
+	background-position: 0 99.87417218543047%;
 }
 
 .svg-iconShield-box {
@@ -164,7 +174,7 @@
 
 .svg-iconYoutubeGray {
 	@extend %svg-common;
-	background-position: 52.26130653266332% 31.515151515151516%;
+	background-position: 45.21739130434783% 31.137724550898202%;
 }
 
 .svg-iconYoutubeGray-box {
@@ -174,7 +184,7 @@
 
 .svg-iconYoutubeWhite {
 	@extend %svg-common;
-	background-position: 76.6497461928934% 63.80368098159509%;
+	background-position: 66.2280701754386% 63.03030303030303%;
 }
 
 .svg-iconYoutubeWhite-box {
