--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -5,7 +5,7 @@ html(lang="en" data-scroll='0')
         meta(http-equiv="x-ua-compatible", content="ie=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         meta(name="author" content="Ilia Gromov")
-        link(rel="icon", type="image/x-icon",  href="assets/img/favicon.ico")
+        link(rel="icon", type="image/x-icon",  href="assets/images/png/favicon.ico")
         block base
         block title
             title Chiptuning for you, +20% power and torque – RSchip chiptuning
