--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -44,6 +44,7 @@ html(lang="en" data-scroll='0')
 
         block content
         include ../../components/footer/footer.component.pug
+        include ../../components/chat/chat.component.pug
 
         block modals
         //- for modals overlay
@@ -59,6 +60,7 @@ html(lang="en" data-scroll='0')
            
         block script
             script(src="js/menu/menu.component.js")
+            script(src="js/chat/chat.component.js")
             script(src="js/debuggrid/debuggrid.component.js")
             script(src="js/main.js")
             script(src="libs/js/store-scroll.js")
