--- a/src/components/header/header.component.pug
+++ b/src/components/header/header.component.pug
@@ -6,7 +6,7 @@ header.header
                     img(src="assets/images/svg/logoWhite.svg", alt="logo")
             .headerNav
                 nav.headerNavLinks
-                    a.headerLink(href="javascript:void(0)") RS chip 
+                    a.headerLink(href="rs/rs.html") RS chip 
                     a.headerLink(href="javascript:void(0)") GTR Chip 
                     a.headerLink(href="javascript:void(0)") Gas pedal 
                     a.headerLink(href="javascript:void(0)") Tuning 
