--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -67,6 +67,15 @@
             width: auto
 
 
+.bannerRs
+
+.bannerImg
+    position: relative
+    .chip
+        position: absolute
+        top: 25%
+        right: 30%
+
 /*chat*/
 .chat
     position: fixed
@@ -1282,6 +1291,7 @@ html
         +lg-block
             width: 50%
             margin: 0 8px
+/*select*/
 /*social*/
 .social
     position: relative
