--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -2,9 +2,39 @@
 	background: url("../assets/icons/svg/spriteSVG.svg") no-repeat;
 }
 
+.svg-Group_4279 {
+	@extend %svg-common;
+	background-position: 0 0;
+}
+
+.svg-Group_4279-box {
+	width: 52px;
+	height: 52px;
+}
+
+.svg-iconArrowsLR {
+	@extend %svg-common;
+	background-position: 17.627118644067796% 0;
+}
+
+.svg-iconArrowsLR-box {
+	width: 52px;
+	height: 44.62px;
+}
+
+.svg-iconArrowsUp {
+	@extend %svg-common;
+	background-position: 99.66329966329967% 20.242914979757085%;
+}
+
+.svg-iconArrowsUp-box {
+	width: 50px;
+	height: 47px;
+}
+
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 44.44444444444444% 96.67307692307692%;
+	background-position: 98.66666666666667% 76.11336032388664%;
 }
 
 .svg-iconCart-box {
@@ -14,7 +44,7 @@
 
 .svg-iconChat {
 	@extend %svg-common;
-	background-position: 0 0;
+	background-position: 0 21.487603305785125%;
 }
 
 .svg-iconChat-box {
@@ -24,7 +54,7 @@
 
 .svg-iconChatGray {
 	@extend %svg-common;
-	background-position: 23.636363636363637% 0;
+	background-position: 17.627118644067796% 21.487603305785125%;
 }
 
 .svg-iconChatGray-box {
@@ -32,19 +62,49 @@
 	height: 52px;
 }
 
+.svg-iconChipGray {
+	@extend %svg-common;
+	background-position: 35.25423728813559% 0;
+}
+
+.svg-iconChipGray-box {
+	width: 52px;
+	height: 52px;
+}
+
+.svg-iconChipWhite {
+	@extend %svg-common;
+	background-position: 35.25423728813559% 21.487603305785125%;
+}
+
+.svg-iconChipWhite-box {
+	width: 52px;
+	height: 52px;
+}
+
 .svg-iconEmailGray {
 	@extend %svg-common;
-	background-position: 22.52252252252252% 98.56862745098039%;
+	background-position: 51.48514851485149% 40.46692607003891%;
 }
 
 .svg-iconEmailGray-box {
+	width: 44px;
+	height: 37px;
+}
+
+.svg-iconEmailGray2 {
+	@extend %svg-common;
+	background-position: 99.66329966329967% 39.75409836065574%;
+}
+
+.svg-iconEmailGray2-box {
 	width: 50px;
 	height: 50px;
 }
 
 .svg-iconEmalPurple {
 	@extend %svg-common;
-	background-position: 0 33.29278442922082%;
+	background-position: 0 42.072899389133866%;
 }
 
 .svg-iconEmalPurple-box {
@@ -54,7 +114,7 @@
 
 .svg-iconFacebookGray {
 	@extend %svg-common;
-	background-position: 96.69421487603306% 22.89156626506024%;
+	background-position: 21.766561514195583% 99.147859922179%;
 }
 
 .svg-iconFacebookGray-box {
@@ -64,7 +124,7 @@
 
 .svg-iconFacebookWhite {
 	@extend %svg-common;
-	background-position: 84.23236514522821% 0;
+	background-position: 0 99.92549019607843%;
 }
 
 .svg-iconFacebookWhite-box {
@@ -74,7 +134,7 @@
 
 .svg-iconFreeShipping {
 	@extend %svg-common;
-	background-position: 23.636363636363637% 32.86978508217447%;
+	background-position: 17.627118644067796% 41.733547351524884%;
 }
 
 .svg-iconFreeShipping-box {
@@ -82,9 +142,19 @@
 	height: 44.8px;
 }
 
+.svg-iconHybrEng {
+	@extend %svg-common;
+	background-position: 35.25423728813559% 41.04507064488121%;
+}
+
+.svg-iconHybrEng-box {
+	width: 52px;
+	height: 40.62px;
+}
+
 .svg-iconInstagramGray {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 10.032362459546926% 99.53515625%;
 }
 
 .svg-iconInstagramGray-box {
@@ -94,7 +164,7 @@
 
 .svg-iconInstagramWhite {
 	@extend %svg-common;
-	background-position: 63.36206896551724% 92.52147239263803%;
+	background-position: 66.12377850162866% 54.330708661417326%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -104,17 +174,27 @@
 
 .svg-iconMarkLocationGray {
 	@extend %svg-common;
-	background-position: 46.22222222222222% 0;
+	background-position: 79.47882736156352% 62.65060240963855%;
 }
 
 .svg-iconMarkLocationGray-box {
+	width: 40px;
+	height: 45px;
+}
+
+.svg-iconMarkLocationGray2 {
+	@extend %svg-common;
+	background-position: 52% 0;
+}
+
+.svg-iconMarkLocationGray2-box {
 	width: 47px;
 	height: 52px;
 }
 
 .svg-iconMarkLocationPurple {
 	@extend %svg-common;
-	background-position: 0 65.43708609271523%;
+	background-position: 51.75846051758461% 21.487603305785125%;
 }
 
 .svg-iconMarkLocationPurple-box {
@@ -124,7 +204,7 @@
 
 .svg-iconMarkMapPurple {
 	@extend %svg-common;
-	background-position: 20.02459160372387% 65.43708609271523%;
+	background-position: 0 62.31818181818182%;
 }
 
 .svg-iconMarkMapPurple-box {
@@ -132,19 +212,49 @@
 	height: 52px;
 }
 
+.svg-iconMarker {
+	@extend %svg-common;
+	background-position: 99.32885906040268% 58.10276679841897%;
+}
+
+.svg-iconMarker-box {
+	width: 49px;
+	height: 41px;
+}
+
+.svg-iconPatent {
+	@extend %svg-common;
+	background-position: 14.879532242346851% 62.31818181818182%;
+}
+
+.svg-iconPatent-box {
+	width: 49.41px;
+	height: 52px;
+}
+
 .svg-iconPhoneGray {
 	@extend %svg-common;
-	background-position: 38.90909090909091% 65.43708609271523%;
+	background-position: 65.48387096774194% 20.883534136546185%;
 }
 
 .svg-iconPhoneGray-box {
+	width: 37px;
+	height: 45px;
+}
+
+.svg-iconPhoneGray2 {
+	@extend %svg-common;
+	background-position: 30.61764705882353% 62.31818181818182%;
+}
+
+.svg-iconPhoneGray2-box {
 	width: 41px;
 	height: 52px;
 }
 
 .svg-iconPhonePurple {
 	@extend %svg-common;
-	background-position: 68.63636363636364% 0;
+	background-position: 45.657627118644065% 62.31818181818182%;
 }
 
 .svg-iconPhonePurple-box {
@@ -152,9 +262,29 @@
 	height: 52px;
 }
 
+.svg-iconPhoneWhite {
+	@extend %svg-common;
+	background-position: 66.33986928104575% 0;
+}
+
+.svg-iconPhoneWhite-box {
+	width: 41px;
+	height: 52px;
+}
+
+.svg-iconPinion {
+	@extend %svg-common;
+	background-position: 82.71186440677967% 0;
+}
+
+.svg-iconPinion-box {
+	width: 52px;
+	height: 52px;
+}
+
 .svg-iconReturnCircle {
 	@extend %svg-common;
-	background-position: 68.63636363636364% 34.437086092715234%;
+	background-position: 82.71186440677967% 21.487603305785125%;
 }
 
 .svg-iconReturnCircle-box {
@@ -162,9 +292,29 @@
 	height: 52px;
 }
 
+.svg-iconRudder {
+	@extend %svg-common;
+	background-position: 100% 0;
+}
+
+.svg-iconRudder-box {
+	width: 51px;
+	height: 50px;
+}
+
+.svg-iconSearch {
+	@extend %svg-common;
+	background-position: 66.33986928104575% 38.3399209486166%;
+}
+
+.svg-iconSearch-box {
+	width: 41px;
+	height: 41px;
+}
+
 .svg-iconShield {
 	@extend %svg-common;
-	background-position: 0 99.87417218543047%;
+	background-position: 82.15488215488216% 42.97520661157025%;
 }
 
 .svg-iconShield-box {
@@ -172,9 +322,39 @@
 	height: 52px;
 }
 
+.svg-iconSpeed {
+	@extend %svg-common;
+	background-position: 0 83.80578512396694%;
+}
+
+.svg-iconSpeed-box {
+	width: 52px;
+	height: 52px;
+}
+
+.svg-iconSpeedometer {
+	@extend %svg-common;
+	background-position: 17.627118644067796% 83.80578512396694%;
+}
+
+.svg-iconSpeedometer-box {
+	width: 52px;
+	height: 52px;
+}
+
+.svg-iconWheel {
+	@extend %svg-common;
+	background-position: 35.25423728813559% 82.09269378668286%;
+}
+
+.svg-iconWheel-box {
+	width: 52px;
+	height: 46.95px;
+}
+
 .svg-iconYoutubeGray {
 	@extend %svg-common;
-	background-position: 45.21739130434783% 31.137724550898202%;
+	background-position: 65.57377049180327% 78.60852713178295%;
 }
 
 .svg-iconYoutubeGray-box {
@@ -184,7 +364,7 @@
 
 .svg-iconYoutubeWhite {
 	@extend %svg-common;
-	background-position: 66.2280701754386% 63.03030303030303%;
+	background-position: 51.48514851485149% 79.22265625%;
 }
 
 .svg-iconYoutubeWhite-box {
