--- a/src/components/select/select.component.pug
+++ b/src/components/select/select.component.pug
@@ -1,9 +1,11 @@
 //-select
-section.selectBox 
+.selectBox 
     .selectBoxText Find out how many Horsepowers you can add to your Car
     .selectBoxContainer
-        select(name="select1") 
-            option(value="Mercedes") 
-        .selectBoxSearch 
-    .selectBoxText Can’t find my Car
+        .select Mercedes
+        .select Model
+        .select Modification
+        .selectBoxSearch
+            .svg-iconSearch.svg-iconSearch-box
+    a.selectBoxLink Can’t find my Car
 
