--- a/src/components/select/select.component.sass
+++ b/src/components/select/select.component.sass
@@ -1,1 +1,35 @@
 /*select*/
+.selectBox
+    width: 100%
+.selectBoxText
+    font-family: #{$SFUIText}-Regular
+    font-size: 18px
+    line-height: 59px
+    letter-spacing: 0.02em
+    font-weight: bold
+    text-align: center
+.selectBoxLink
+    display: block
+    font-family: #{$SFUIText}-Regular
+    color: #FE3839
+    text-align: center
+    text-decoration: underline
+    font-size: 14px
+    line-height: 29px
+
+.selectBoxContainer
+    display: flex
+    align-items: center
+    width: 673px
+    height: 68px
+    background: rgba(255, 255, 255, 0.15)
+    backdrop-filter: blur(35px)
+    border: 1.5px solid rgba(255, 255, 255, 0.15)
+    box-sizing: border-box
+    border-radius: 15px
+    padding: 20px 25px
+    .select
+        font-size: 15px
+        line-height: 29px
+        border-right: 1px solid rgba(255, 255, 255, 0.15)
+        min-width: 178px
