--- a/src/sass/base/base.sass
+++ b/src/sass/base/base.sass
@@ -87,4 +87,12 @@ i
   display: inline-block
 address
   display: inline-block
+.page__li
+  // list-style-image: url('../assets/icons/svg/spriteSVG.svg#iconMarker') 
+ 
+
+  &::marker
+    
+    // content: url('../assets/icons/svg/spriteSVG.svg#iconMarker') 
+    // font-size: 1px
 /* __base__ */
