--- a/src/pages/rs/rs.pug
+++ b/src/pages/rs/rs.pug
@@ -11,10 +11,13 @@ block append style
 block content
 	main.page.pageRs
 		include ../../components/banner/bannerRs.component.pug
+		include ../../components/advantages/advantages.component.pug
+		include ../../components/product/productRs.component.pug
+		include ../../components/productBlocks/productRsControls.component.pug
 		include ../../components/faq/faq.component.pug
 block modals
 	
 block append style
 
 block append script
-	script(src="/js/faq/faq.component.js")
+	script(src="js/faq/faq.component.js")
