--- a/src/sass/sprite/svg/sprite.scss
+++ b/src/sass/sprite/svg/sprite.scss
@@ -2,19 +2,9 @@
 	background: url("../assets/icons/svg/spriteSVG.svg") no-repeat;
 }
 
-.svg-Group_4279 {
-	@extend %svg-common;
-	background-position: 0 0;
-}
-
-.svg-Group_4279-box {
-	width: 52px;
-	height: 52px;
-}
-
 .svg-iconArrowsLR {
 	@extend %svg-common;
-	background-position: 17.627118644067796% 0;
+	background-position: 0 0;
 }
 
 .svg-iconArrowsLR-box {
@@ -24,7 +14,7 @@
 
 .svg-iconArrowsUp {
 	@extend %svg-common;
-	background-position: 99.66329966329967% 20.242914979757085%;
+	background-position: 99.66329966329967% 20.491803278688526%;
 }
 
 .svg-iconArrowsUp-box {
@@ -34,7 +24,7 @@
 
 .svg-iconCart {
 	@extend %svg-common;
-	background-position: 98.66666666666667% 76.11336032388664%;
+	background-position: 98.66666666666667% 77.04918032786885%;
 }
 
 .svg-iconCart-box {
@@ -44,7 +34,7 @@
 
 .svg-iconChat {
 	@extend %svg-common;
-	background-position: 0 21.487603305785125%;
+	background-position: 0 18.669456066945607%;
 }
 
 .svg-iconChat-box {
@@ -54,7 +44,7 @@
 
 .svg-iconChatGray {
 	@extend %svg-common;
-	background-position: 17.627118644067796% 21.487603305785125%;
+	background-position: 17.627118644067796% 0;
 }
 
 .svg-iconChatGray-box {
@@ -74,7 +64,7 @@
 
 .svg-iconChipWhite {
 	@extend %svg-common;
-	background-position: 35.25423728813559% 21.487603305785125%;
+	background-position: 0 40.42677824267783%;
 }
 
 .svg-iconChipWhite-box {
@@ -84,7 +74,7 @@
 
 .svg-iconEmailGray {
 	@extend %svg-common;
-	background-position: 51.48514851485149% 40.46692607003891%;
+	background-position: 80.52805280528052% 61.41732283464567%;
 }
 
 .svg-iconEmailGray-box {
@@ -94,7 +84,7 @@
 
 .svg-iconEmailGray2 {
 	@extend %svg-common;
-	background-position: 99.66329966329967% 39.75409836065574%;
+	background-position: 99.66329966329967% 40.24896265560166%;
 }
 
 .svg-iconEmailGray2-box {
@@ -104,7 +94,7 @@
 
 .svg-iconEmalPurple {
 	@extend %svg-common;
-	background-position: 0 42.072899389133866%;
+	background-position: 17.627118644067796% 39.567549858716575%;
 }
 
 .svg-iconEmalPurple-box {
@@ -114,7 +104,7 @@
 
 .svg-iconFacebookGray {
 	@extend %svg-common;
-	background-position: 21.766561514195583% 99.147859922179%;
+	background-position: 11.987381703470032% 99.45669291338582%;
 }
 
 .svg-iconFacebookGray-box {
@@ -124,7 +114,7 @@
 
 .svg-iconFacebookWhite {
 	@extend %svg-common;
-	background-position: 0 99.92549019607843%;
+	background-position: 78.48101265822785% 79.61111111111111%;
 }
 
 .svg-iconFacebookWhite-box {
@@ -134,7 +124,7 @@
 
 .svg-iconFreeShipping {
 	@extend %svg-common;
-	background-position: 17.627118644067796% 41.733547351524884%;
+	background-position: 35.25423728813559% 39.24451665312754%;
 }
 
 .svg-iconFreeShipping-box {
@@ -144,7 +134,7 @@
 
 .svg-iconHybrEng {
 	@extend %svg-common;
-	background-position: 35.25423728813559% 41.04507064488121%;
+	background-position: 35.25423728813559% 20.768431983385256%;
 }
 
 .svg-iconHybrEng-box {
@@ -154,7 +144,7 @@
 
 .svg-iconInstagramGray {
 	@extend %svg-common;
-	background-position: 10.032362459546926% 99.53515625%;
+	background-position: 0 99.8498023715415%;
 }
 
 .svg-iconInstagramGray-box {
@@ -164,7 +154,7 @@
 
 .svg-iconInstagramWhite {
 	@extend %svg-common;
-	background-position: 66.12377850162866% 54.330708661417326%;
+	background-position: 67.75244299674267% 79.92828685258964%;
 }
 
 .svg-iconInstagramWhite-box {
@@ -174,7 +164,7 @@
 
 .svg-iconMarkLocationGray {
 	@extend %svg-common;
-	background-position: 79.47882736156352% 62.65060240963855%;
+	background-position: 66.12377850162866% 21.13821138211382%;
 }
 
 .svg-iconMarkLocationGray-box {
@@ -194,7 +184,7 @@
 
 .svg-iconMarkLocationPurple {
 	@extend %svg-common;
-	background-position: 51.75846051758461% 21.487603305785125%;
+	background-position: 51.75846051758461% 21.757322175732217%;
 }
 
 .svg-iconMarkLocationPurple-box {
@@ -204,7 +194,7 @@
 
 .svg-iconMarkMapPurple {
 	@extend %svg-common;
-	background-position: 0 62.31818181818182%;
+	background-position: 0 62.18410041841004%;
 }
 
 .svg-iconMarkMapPurple-box {
@@ -214,7 +204,7 @@
 
 .svg-iconMarker {
 	@extend %svg-common;
-	background-position: 99.32885906040268% 58.10276679841897%;
+	background-position: 99.32885906040268% 58.8%;
 }
 
 .svg-iconMarker-box {
@@ -224,7 +214,7 @@
 
 .svg-iconPatent {
 	@extend %svg-common;
-	background-position: 14.879532242346851% 62.31818181818182%;
+	background-position: 14.879532242346851% 62.18410041841004%;
 }
 
 .svg-iconPatent-box {
@@ -234,7 +224,7 @@
 
 .svg-iconPhoneGray {
 	@extend %svg-common;
-	background-position: 65.48387096774194% 20.883534136546185%;
+	background-position: 65.48387096774194% 39.43089430894309%;
 }
 
 .svg-iconPhoneGray-box {
@@ -244,7 +234,7 @@
 
 .svg-iconPhoneGray2 {
 	@extend %svg-common;
-	background-position: 30.61764705882353% 62.31818181818182%;
+	background-position: 30.61764705882353% 62.18410041841004%;
 }
 
 .svg-iconPhoneGray2-box {
@@ -254,7 +244,7 @@
 
 .svg-iconPhonePurple {
 	@extend %svg-common;
-	background-position: 45.657627118644065% 62.31818181818182%;
+	background-position: 45.657627118644065% 62.18410041841004%;
 }
 
 .svg-iconPhonePurple-box {
@@ -284,7 +274,7 @@
 
 .svg-iconReturnCircle {
 	@extend %svg-common;
-	background-position: 82.71186440677967% 21.487603305785125%;
+	background-position: 82.71186440677967% 21.757322175732217%;
 }
 
 .svg-iconReturnCircle-box {
@@ -304,7 +294,7 @@
 
 .svg-iconSearch {
 	@extend %svg-common;
-	background-position: 66.33986928104575% 38.3399209486166%;
+	background-position: 66.33986928104575% 56.8%;
 }
 
 .svg-iconSearch-box {
@@ -314,7 +304,7 @@
 
 .svg-iconShield {
 	@extend %svg-common;
-	background-position: 82.15488215488216% 42.97520661157025%;
+	background-position: 82.15488215488216% 43.51464435146443%;
 }
 
 .svg-iconShield-box {
@@ -324,7 +314,7 @@
 
 .svg-iconSpeed {
 	@extend %svg-common;
-	background-position: 0 83.80578512396694%;
+	background-position: 0 83.94142259414225%;
 }
 
 .svg-iconSpeed-box {
@@ -334,7 +324,7 @@
 
 .svg-iconSpeedometer {
 	@extend %svg-common;
-	background-position: 17.627118644067796% 83.80578512396694%;
+	background-position: 17.627118644067796% 83.94142259414225%;
 }
 
 .svg-iconSpeedometer-box {
@@ -342,9 +332,19 @@
 	height: 52px;
 }
 
+.svg-iconSpeedometerGray {
+	@extend %svg-common;
+	background-position: 35.25423728813559% 83.94142259414225%;
+}
+
+.svg-iconSpeedometerGray-box {
+	width: 52px;
+	height: 52px;
+}
+
 .svg-iconWheel {
 	@extend %svg-common;
-	background-position: 35.25423728813559% 82.09269378668286%;
+	background-position: 52.88135593220339% 82.20446629788977%;
 }
 
 .svg-iconWheel-box {
@@ -354,7 +354,7 @@
 
 .svg-iconYoutubeGray {
 	@extend %svg-common;
-	background-position: 65.57377049180327% 78.60852713178295%;
+	background-position: 17.049180327868854% 20.392156862745097%;
 }
 
 .svg-iconYoutubeGray-box {
@@ -364,7 +364,7 @@
 
 .svg-iconYoutubeWhite {
 	@extend %svg-common;
-	background-position: 51.48514851485149% 79.22265625%;
+	background-position: 51.48514851485149% 41.10671936758893%;
 }
 
 .svg-iconYoutubeWhite-box {
