--- a/src/sass/blocks/page.sass
+++ b/src/sass/blocks/page.sass
@@ -1,5 +1,10 @@
 /* __page__ */
+.mainPage
+    margin-top: -70px
+.pageRs
+    margin-top: -70px
 .page
+
     // margin-top: -70px
     overflow: hidden
     &__title
