--- a/src/components/banner/banner.component.sass
+++ b/src/components/banner/banner.component.sass
@@ -39,9 +39,9 @@
 
 
 .bannerFlexContainer
-    position: relative
     +row-flex()
     // align-items: center
+    // height: 769px
 .bannerText
     +col()
     +size(9)
@@ -57,16 +57,17 @@
         padding-left: 0
 .bannerImg
     // +col()
+    max-height: 770px
     width: 100%
     +size-md(9)
-    +size-lg(9.2)
+    +size-lg(9)
     +shift-md-right(-3)
+    
     img
         width: 100%
-        +md-block
-            width: auto
-        +lg-block
-            width: auto
+    .chip
+        width: auto
+
 .bannerSelect
     position: absolute
     left: 50%
