--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../pug/templates/template
 block append style
 block content
-	main.page
+	main.page.mainPage
 		include ../components/banner/banner.component.pug
 		include ../components/products/products.component.pug
 		include ../components/faq/faq.component.pug
