--- a/src/components/product/productRs.component.pug
+++ b/src/components/product/productRs.component.pug
@@ -24,7 +24,7 @@ section.product.productRs
                         i.svg-iconMarker.svg-iconMarker-box
                         | Easy to install
                 .productPrice 
-                    button.page__btn.page__btn_notTransparent ADD TO BAG
+                    button.page__btn ADD TO BAG
                     .productPrice__cost $299
 
             
