--- a/src/pages/rs/rs.pug
+++ b/src/pages/rs/rs.pug
@@ -10,7 +10,7 @@ block append style
 
 block content
 	main.page.pageRs
-		include ../../components/banner/bannerRs.component.pug
+		//- include ../../components/banner/bannerRs.component.pug
 		include ../../components/productBlocks/productAdvantages.component.pug
 		include ../../components/product/productRs.component.pug
 		include ../../components/productBlocks/productRsControls.component.pug
