--- a/src/sass/blocks/page.sass
+++ b/src/sass/blocks/page.sass
@@ -109,7 +109,7 @@
         box-sizing: border-box
 
         position: relative
-        display: flex
+        display: inline-flex
         justify-content: center
         align-items: center
 
