--- a/src/sass/mixins/scrollbar-mixin.sass
+++ b/src/sass/mixins/scrollbar-mixin.sass
@@ -8,15 +8,15 @@
         height: $scrollbar-button-height
 
     ::-webkit-scrollbar-track 
-        background-color: $scrollbar-track-background-color
+        background: $scrollbar-track-background-color
         border-radius: $scrollbar-track-border-radius
 
     ::-webkit-scrollbar-track-piece 
-        background-color: $scrollbar-track-background-color
+        background: $scrollbar-track-background-color
 
     ::-webkit-scrollbar-thumb 
-        background-color: $scrollbar-thumb-background-color
+        background: $scrollbar-thumb-background-color
         border-radius: $scrollbar-thumb-border-radius
 
     ::-webkit-scrollbar-corner 
-        background-color: $scrollbar-corner-background-color
+        background: $scrollbar-corner-background-color
