--- a/src/components/banner/bannerRs.component.pug
+++ b/src/components/banner/bannerRs.component.pug
@@ -4,8 +4,8 @@ section.banner.bannerRs
             .bannerText
                 h1.page__title-h1_big RSCHIP
                 h1.page__title-h1
-                    span Better acceleration 
-                    | with RS Response 
+                    span.page_red Better acceleration 
+                    | <br> with RS Response 
                 p.pageText Better acceleration and sportier thotlle response for your Car
                 include ../socialIcons/socialIcons.component.pug
                 
