--- a/src/sass/_allComponents.sass
+++ b/src/sass/_allComponents.sass
@@ -2,10 +2,9 @@
 .banner
     position: relative
     overflow: hidden
+    
     .page__title-h1
-        
-        &_big
-            +shift-md-right(-9)
+       
         margin-top: 46px
         width: 85%
         +sm-block
@@ -15,8 +14,12 @@
             width: 100%
         +lg-block
             width: 100%
+         
+        &_big
+            +shift-md-right(-9)
             
     .pageText
+        
         margin-top: 31px
         padding-right: 15px
         margin-bottom: 58px
@@ -36,6 +39,15 @@
             margin-bottom: 0
             position: absolute
             bottom: 83px
+    &.bannerRs
+        .page__title-h1
+            width: 200%
+        .bannerImg
+            position: relative
+            .chip
+                position: absolute
+                top: 25%
+                right: 30%
 
 
 .bannerFlexContainer
@@ -47,7 +59,9 @@
     +size(9)
     +size-md(3)
     +size-lg(2.8)
+    background: #000
     position: relative
+    z-index: 1
     padding-top: 60px
     +sm-block
         padding-left: 63px
@@ -70,17 +84,10 @@
 
 .bannerSelect
     position: absolute
+    z-index: 3
     left: 50%
     bottom: 0
     transform: translateX(-50%)
-.bannerRs
-    .bannerImg
-        position: relative
-        .chip
-            position: absolute
-            top: 25%
-            right: 30%
-
 /*chat*/
 .chat
     position: fixed
@@ -209,94 +216,6 @@
     &__z-index-negative 
         z-index: -1
 /* __debugGrid__ */
-/*faq*/
-.faq
-    padding: 86px 0 106px
-    +sm-block
-        padding: 135px 0 115px
-    +md-block
-        padding: 94px 0 120px
-    +lg-block
-        padding: 94px 0 120px
-    .page__title-h2_small
-        text-align: center
-    .page__title-h3
-        text-align: center
-        font-weight: 800
-        font-size: 24px
-        line-height: 125%
-        
-        width: 75%
-        margin: 9px auto 53px
-        +sm-block
-            font-size: 36px
-            margin-bottom: 32px
-            line-height: 164%
-        +md-block
-            width: 44%  
-            font-size: 36px
-            line-height: 164%
-            margin-bottom: 54px
-        +lg-block
-            width: 44%
-            font-size: 36px
-            line-height: 164%
-            margin-bottom: 54px
-       
-        span
-            color: #FF4C62
-
-.faqFlexContainer 
-    +row-flex
-.faqCol
-    +col
-    +size(9)
-    +size-md(4.5)
-    +size-lg(4.5)
-.faqItem
-    margin-bottom: 16px
-
-.faqItemDetails 
-    cursor: pointer
-    &__Summary
-        font-family: #{$SFUIText}-Regular
-        border-bottom: 1px solid #fff
-        font-size: 18px
-        line-height: 133%
-        letter-spacing: 0.05em 
-       
-        color: #fff
-        font-weight: bold
-
-        display: flex
-        justify-content: space-between
-        margin-bottom: 16px
-        padding-top: 23px
-        padding-bottom: 15px
-        .icon-arrow-white-details
-            margin-top: 8px
-            margin-right: 12px
-    
-    &__Content
-        display: none
-        font-size: 15px
-        line-height: 26px
-
-        /* or 173% */
-        letter-spacing: 0.025em
-
-        color: #B2B2B2
-        padding-top: 34px
-    &.active
-        
-        .faqItemDetails__Summary
-            color: transparent
-            background-image: linear-gradient(to right, #FF624A , #FF4686)
-            background-clip: text
-        .faqItemDetails__Content
-            display: block
-        .icon-arrow-white-details
-            transform: rotate(180deg)
 /*footer*/
 .footer
     position: relative
@@ -565,6 +484,94 @@
         font-size: 15px
         line-height: 29px
         letter-spacing: .6px
+/*faq*/
+.faq
+    padding: 86px 0 106px
+    +sm-block
+        padding: 135px 0 115px
+    +md-block
+        padding: 94px 0 120px
+    +lg-block
+        padding: 94px 0 120px
+    .page__title-h2_small
+        text-align: center
+    .page__title-h3
+        text-align: center
+        font-weight: 800
+        font-size: 24px
+        line-height: 125%
+        
+        width: 75%
+        margin: 9px auto 53px
+        +sm-block
+            font-size: 36px
+            margin-bottom: 32px
+            line-height: 164%
+        +md-block
+            width: 44%  
+            font-size: 36px
+            line-height: 164%
+            margin-bottom: 54px
+        +lg-block
+            width: 44%
+            font-size: 36px
+            line-height: 164%
+            margin-bottom: 54px
+       
+        span
+            color: #FF4C62
+
+.faqFlexContainer 
+    +row-flex
+.faqCol
+    +col
+    +size(9)
+    +size-md(4.5)
+    +size-lg(4.5)
+.faqItem
+    margin-bottom: 16px
+
+.faqItemDetails 
+    cursor: pointer
+    &__Summary
+        font-family: #{$SFUIText}-Regular
+        border-bottom: 1px solid #fff
+        font-size: 18px
+        line-height: 133%
+        letter-spacing: 0.05em 
+       
+        color: #fff
+        font-weight: bold
+
+        display: flex
+        justify-content: space-between
+        margin-bottom: 16px
+        padding-top: 23px
+        padding-bottom: 15px
+        .icon-arrow-white-details
+            margin-top: 8px
+            margin-right: 12px
+    
+    &__Content
+        display: none
+        font-size: 15px
+        line-height: 26px
+
+        /* or 173% */
+        letter-spacing: 0.025em
+
+        color: #B2B2B2
+        padding-top: 34px
+    &.active
+        
+        .faqItemDetails__Summary
+            color: transparent
+            background-image: linear-gradient(to right, #FF624A , #FF4686)
+            background-clip: text
+        .faqItemDetails__Content
+            display: block
+        .icon-arrow-white-details
+            transform: rotate(180deg)
 /*form*/
 .form
     background: #111111
@@ -1136,14 +1143,20 @@ html
 .product
     background: #111111
     padding: 92px 0 0
+    +md-block
+        padding: 114px 0 0
+    +lg-block
+        padding: 114px 0 0
     .page__title-h2_small
         text-align: center
 
     .page__title-h3
         font-family: #{$SFUIDisplay}-Bold
+        font-size: 36px
+        line-height: 59px
         text-align: center
-        width: 25%
-        margin: 0 auto -50px
+        width: 30%
+        margin: 15px auto -40px
 
 .productFlexContainer 
     +row-flex
@@ -1151,25 +1164,27 @@ html
 .productImg
     +col
     +size(9)
-    +size-md(9/2)
-    +size-lg(9/2)
+    +size-md(4)
+    +size-lg(4)
+    padding-right: 6%
+    text-align: center
 
 .productText
     +col
     +size(9)
-    +size-md(9/2)
-    +size-lg(9/2)
+    +size-md(5)
+    +size-lg(5)
     .page__title-h4
         font-size: 24px
         line-height: 43px
         letter-spacing: 0.05em
-        margin-top: 140px
+        margin-top: 117px
         margin-bottom: 60px
         font-weight: bold
     .page__ul 
         display: flex
         flex-wrap: wrap
-        margin-bottom: 70px
+        margin-bottom: 58px
         .page__li
             width: 50%
             display: flex
@@ -1178,8 +1193,8 @@ html
             font-size: 15px
             line-height: 59px
 .productPrice
-    display: flex
     &__cost
+        display: inline-flex
         font-family: #{$SFUIDisplay}-Bold
         font-size: 24px
         line-height: 59px
