--- a/src/sass/variables/variables.sass
+++ b/src/sass/variables/variables.sass
@@ -1,7 +1,7 @@
 $color_white: #ffffff
 $color_black: #000
 $color_scrollbar-track: transparent
-$color_scrollbar-thumb: #333333
+$color_scrollbar-thumb: linear-gradient(0deg,#FF3838, #700ED2)
 
 $color_1: #700ED2
 $color_2: #FF3838
